--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Bio_Site.css">
+    <title>Landing Page</title>
+</head>
+<nav>
+
+</nav>
+
+<!---these are just the bare bones of where i want things set up will be more once i move along.-->
+<!--treating thes as a genral outline before diving into this more-->
+<h1>Everything you need to know about Frank(work in progess on the title)</h1>
+
+<body>
+
+    <div class="left">
+        <h2>About</h2>
+    </div>
+
+    <div class="middle">
+        <h2>Hobbies</h2>
+    </div>
+    <div class="right">
+        <h2>Back to CSD landing page</h2>
+    </div>
+
+</body>
+
+</html>
