--- a/About_Page/About_Page.html
+++ b/About_Page/About_Page.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Bio_Site.css">
+    <title>About Page</title>
+</head>
+
+<body>
+    <div class="title">
+        <h1>Frank Kromer</h1>
+    </div>
+    <h2>About</h2>
+    <div class="Paragraph">
+        <p>Frank Kromer was born in North Carolina where he was raised for a few short years before him and his family
+            moved up to Cleveland Ohio. He lived in Cleveland for most of grade school before moving to Sandusky Ohio,
+            this is
+            where the story begins. Frank went to Sandusky Central Catholic high school where he graduated and decided
+            to follow in his brother’s footsteps to join the Navy. He joined the Navy right out of high school because
+            he
+            really didn’t really know what he wanted to do with his life just yet and didn’t want to waste money trying
+            to figure that out at an expensive college. He worked at battery park marina before going to bootcamp where
+            he
+            grew close to one of his older brother’s friends and eventually became one of his best friends. His favorite
+            memory of working there would be painting curbs with him and talking about what video game they were going
+            to play
+            later that night. After spending some years in the navy, he eventually got out of the Navy and went to
+            college
+            at Cleveland State University. He got his degree in accounting but through internships he felt it was dull
+            and
+            not for him. After some soul searching, he talking to family and friends and decided to pivot his career
+            choice
+            into tech. He packed everything up and went west to San Diego where his older brother lives and is currently
+            enrolled in a full stack bootcamp. While at this bootcamp he has found it more stratifying, challenging and
+            engaging then accounting. He is set to graduate in March of 2023 and will be looking to get his foot in the
+            door somewhere so can show off the skills he has acquired over the very intensive bootcamp that he
+            completed.
+        </p>
+    </div>
+
+</body>
+
+</html>
