added links, nav bar, and background color

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <title>Landing Page</title>
 </head>
 <nav>
-
+    <a href="/index.html">Home</a>
+    <a href="/About_Page/About_Page.html">About</a>
+    <a href="/Hobbies_Page/Hobbies_Page.html">Hobbies</a>
+    <a href="#">CSD Landing Page</a>
 </nav>
 
 <!---these are just the bare bones of where i want things set up will be more once i move along.-->
@@ -19,14 +22,21 @@
 <body>
 
     <div class="left">
-        <h2>About</h2>
+        <div class="aboutcontainer">
+            <a href="/About_Page/About_Page.html">About</a>
+        </div>
+
     </div>
 
     <div class="middle">
-        <h2>Hobbies</h2>
+        <div class="hobbiescontainer">
+            <a href="/Hobbies_Page/Hobbies_Page.html">Hobbies</a>
+        </div>
     </div>
     <div class="right">
-        <h2>Back to CSD landing page</h2>
+        <div class="CSDcontainer">
+            <a href="#">Back to CSD landing page</a>
+        </div>
     </div>
 
 </body>
