--- a/About_Page/About_Page.html
+++ b/About_Page/About_Page.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Bio_Site.css">
+    <link rel="stylesheet" href="About_Page.css">
     <title>About Page</title>
 </head>
 
