--- a/Hobbies_Page/Hobbies_Page.html
+++ b/Hobbies_Page/Hobbies_Page.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Bio_Site.css">
+    <link rel="stylesheet" href="Hobbies_Page.css">
     <title>Hobbies</title>
 </head>
 <h1> Frank's Hobbies</h1>
