updated nav bars on each page

--- a/Hobbies_Page/Hobbies_Page.html
+++ b/Hobbies_Page/Hobbies_Page.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="Hobbies_Page.css">
     <title>Hobbies</title>
 </head>
+<nav>
+    <a href="/index.html">Home</a>
+    <a href="/About_Page/About_Page.html">About</a>
+    <a href="/Hobbies_Page/Hobbies_Page.html">Hobbies</a>
+    <a href="#">CSD Landing Page</a>
+</nav>
 <h1> Frank's Hobbies</h1>
 
 <body>
