--- a/About_Page/About_Page.html
+++ b/About_Page/About_Page.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="About_Page.css">
     <title>About Page</title>
 </head>
+<nav>
+    <a href="/index.html">Home</a>
+    <a href="/About_Page/About_Page.html">About</a>
+    <a href="/Hobbies_Page/Hobbies_Page.html">Hobbies</a>
+    <a href="#">CSD Landing Page</a>
+</nav>
 
 <body>
     <div class="title">
