testing new design

--- a/About_Page/About_Page.html
+++ b/About_Page/About_Page.html
@@ -17,7 +17,10 @@
 
 <body>
     <div class="title">
-        <h1>Frank Kromer</h1>
+        <div class="container">
+            <img src="/About_Page/images/Franklandscape.jpeg">
+            <div class="centered">Frank Kromer</div>
+        </div>
     </div>
     <h2>About</h2>
     <div class="Paragraph">
