updated background pic

--- a/About_Page/About_Page.html
+++ b/About_Page/About_Page.html
@@ -12,13 +12,12 @@
     <a href="/index.html">Home</a>
     <a href="/About_Page/About_Page.html">About</a>
     <a href="/Hobbies_Page/Hobbies_Page.html">Hobbies</a>
-    <a href="#">CSD Landing Page</a>
+    <a href="/">CSD Landing Page</a>
 </nav>
 
 <body>
     <div class="title">
         <div class="container">
-            <img src="/About_Page/images/Franklandscape.jpeg">
             <div class="centered">Frank Kromer</div>
         </div>
     </div>
