testing link back to CSD landing

--- a/About_Page/About_Page.html
+++ b/About_Page/About_Page.html
@@ -12,7 +12,7 @@
     <a href="/index.html">Home</a>
     <a href="/About_Page/About_Page.html">About</a>
     <a href="/Hobbies_Page/Hobbies_Page.html">Hobbies</a>
-    <a href="/">CSD Landing Page</a>
+    <a href="../">CSD Landing Page</a>
 </nav>
 
 <body>
