--- a/Hobbies_Page/Hobbies_Page.html
+++ b/Hobbies_Page/Hobbies_Page.html
@@ -9,9 +9,9 @@
     <title>Hobbies</title>
 </head>
 <nav>
-    <a href="/index.html">Home</a>
-    <a href="/About_Page/About_Page.html">About</a>
-    <a href="/Hobbies_Page/Hobbies_Page.html">Hobbies</a>
+    <a href="/bioSite/index.html">Home</a>
+    <a href="/bioSite/About_Page/About_Page.html">About</a>
+    <a href="/bioSite/Hobbies_Page/Hobbies_Page.html">Hobbies</a>
     <a href="#">CSD Landing Page</a>
 </nav>
 <h1> Frank's Hobbies</h1>
