--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Landing Page</title>
 </head>
 <nav>
-    <a href="/index.html">Home</a>
-    <a href="/About_Page/About_Page.html">About</a>
-    <a href="/Hobbies_Page/Hobbies_Page.html">Hobbies</a>
+    <a href="jyouskie.github.io/bioSite/index.html">Home</a>
+    <a href="jyouskie.github.io/bioSite/About_Page/About_Page.html">About</a>
+    <a href="jyouskie.github.io/bioSite/Hobbies_Page/Hobbies_Page.html">Hobbies</a>
     <a href="#">CSD Landing Page</a>
 </nav>
 
