--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="jyouskie.github.io/bioSite/index.html">Home</a>
     <a href="jyouskie.github.io/bioSite/About_Page/About_Page.html">About</a>
     <a href="jyouskie.github.io/bioSite/Hobbies_Page/Hobbies_Page.html">Hobbies</a>
-    <a href="#">CSD Landing Page</a>
+    <a href="../">CSD Landing Page</a>
 </nav>
 
 <!---these are just the bare bones of where i want things set up will be more once i move along.-->
