updated url links

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <div class="right">
         <div class="CSDcontainer">
-            <a href="#">Back to CSD landing page</a>
+            <a href="../">Back to CSD landing page</a>
         </div>
     </div>
 
