--- a/About_Page/About_Page.html
+++ b/About_Page/About_Page.html
@@ -9,9 +9,9 @@
     <title>About Page</title>
 </head>
 <nav>
-    <a href="/index.html">Home</a>
-    <a href="/About_Page/About_Page.html">About</a>
-    <a href="/Hobbies_Page/Hobbies_Page.html">Hobbies</a>
+    <a href="/bioSite/">Home</a>
+    <a href="/bioSite/About_Page/About_Page.html">About</a>
+    <a href="/bioSite/Hobbies_Page/Hobbies_Page.html">Hobbies</a>
     <a href="../">CSD Landing Page</a>
 </nav>
 
