--- a/Hobbies_Page/Hobbies_Page.html
+++ b/Hobbies_Page/Hobbies_Page.html
@@ -9,10 +9,10 @@
     <title>Hobbies</title>
 </head>
 <nav>
-    <a href="jyouskie.github.io/bioSite/index.html">Home</a>
-    <a href="jyouskie.github.io/bioSite/About_Page/About_Page.html">About</a>
-    <a href="jyouskie.github.io/bioSite/Hobbies_Page/Hobbies_Page.html">Hobbies</a>
-    <a href="#">CSD Landing Page</a>
+    <a href="/bioSite/index.html">Home</a>
+    <a href="/bioSite/About_Page/About_Page.html">About</a>
+    <a href="/bioSite/Hobbies_Page/Hobbies_Page.html">Hobbies</a>
+    <a href="../">CSD Landing Page</a>
 </nav>
 <h1> Frank's Hobbies</h1>
 
