final link update

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 
     <div class="left">
         <div class="aboutcontainer">
-            <a href="/About_Page/About_Page.html">About</a>
+            <a href="/bioSite/About_Page/About_Page.html">About</a>
         </div>
 
     </div>
 
     <div class="middle">
         <div class="hobbiescontainer">
-            <a href="/Hobbies_Page/Hobbies_Page.html">Hobbies</a>
+            <a href="/bioSite/Hobbies_Page/Hobbies_Page.html">Hobbies</a>
         </div>
     </div>
     <div class="right">
