--- a/Hobbies_Page/Hobbies_Page.html
+++ b/Hobbies_Page/Hobbies_Page.html
@@ -19,12 +19,41 @@
 <body>
     <div class="games">
         <h2>Video Games</h2>
+        <p>
+            Frank doesn’t have to much free time on his hands during this fullstack bootcamp, but when he does he enjoys
+            playing video games, reading, and baking. Some of the video games he likes to play are Age of empires 3, Men
+            of war: Assault Squad Two, and halo. Age of empires 3 came out in 2005, but they just released a remastered
+            edition last year that he has transition to. They game is RTS or real time strategy game that is set during
+            the imperial age of the world. He has competed in many world tournaments and has taken placed 2nd a couple
+            of times. The second game he enjoys is Men of War, this is also a RTS game that is set during World War Two.
+            This game came out in 2014 and still to this day is a very relevant World War Two game. Lastly Halo, one of
+            the all-time best game franchises, he remembers the day of dominating in halo 2-3 when the game was in its
+            hay day. For people who don’t know halo is a FPS or first person shooter that is set in the future. The
+            original storyline you are a super solider that must save earth and fight against alien invaders that came
+            to take over earth. He currently plays halo infinite which is the 6th installment of the franchise.
+        </p>
     </div>
     <div class="reading">
         <h2>Reading</h2>
+        <p>
+            When frank gets the chance he enjoys picking up a good book and reading it on the patio in the warm southern
+            California sun. His all-time favorite book the Count of Monte Cristo. The book takes place during the period
+            of 1815-1839 in France, Italy, and islands in the Mediterranean. The time period its set in was a historical
+            time in France, the era of Bourbon Restoration. The next two weren’t really books them selves but series.
+            The first series he enjoyed was The Lord of the Rings series. It was a 3 book series The Fellowship of the
+            Rings, The Two Towers, and The Return of the King. These books were written by J.R.R Tolkien and was a
+            sequel to his first book the Hobbit, but later turned into what it is now. The third and final series that
+            he enjoyed to read was the Game Of Thrones series. It was written by Gorge R.R. Martian and is a fictional
+            story that takes place in Westeros, the author based the world off of medieval Britain. There are 5 books in
+            the series with another one on the way in the near future (fans have been waiting for years for it).
+        </p>
     </div>
     <div class="baking">
         <h2>Baking</h2>
+        <p>
+            His last hobby that he likes to part take in is baking. He enjoys making cakes, brownies, and cookies. He
+            has a massive sweet tooth, which is why he got into baking in the first place.
+        </p>
     </div>
 
 </body>
