picture, color, and text update

--- a/Hobbies_Page/Hobbies_Page.html
+++ b/Hobbies_Page/Hobbies_Page.html
@@ -19,7 +19,7 @@
 <body>
     <div class="games">
         <h2>Video Games</h2>
-        <p>
+        <p class="videogames">
             Frank doesn’t have to much free time on his hands during this fullstack bootcamp, but when he does he enjoys
             playing video games, reading, and baking. Some of the video games he likes to play are Age of empires 3, Men
             of war: Assault Squad Two, and halo. Age of empires 3 came out in 2005, but they just released a remastered
@@ -35,7 +35,7 @@
     </div>
     <div class="reading">
         <h2>Reading</h2>
-        <p>
+        <p class="books">
             When frank gets the chance he enjoys picking up a good book and reading it on the patio in the warm southern
             California sun. His all-time favorite book the Count of Monte Cristo. The book takes place during the period
             of 1815-1839 in France, Italy, and islands in the Mediterranean. The time period its set in was a historical
@@ -50,7 +50,7 @@
     </div>
     <div class="baking">
         <h2>Baking</h2>
-        <p>
+        <p class="cookies">
             His last hobby that he likes to part take in is baking. He enjoys making cakes, brownies, and cookies. He
             has a massive sweet tooth, which is why he got into baking in the first place.
         </p>
