updated landing page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
 <h1>Everything you need to know about Frank(work in progess on the title)</h1>
 
 <body>
-
+    <h2 class="welcome">Welcome to the landing Page</h2>
+    <h3 class="info">Here you will be able to navigate across the site and select what page you want to go to first.
+    </h3>
+    <p class="intro">This website is about my best friend Frank Kromer. In the information that I have provided, I
+        include an up-to-date short story about his life and some of his favorite hobbies. This is everything you need
+        to know about Frank Kromer.
+    </p>
     <div class="left">
         <div class="aboutcontainer">
             <a href="/bioSite/About_Page/About_Page.html">About</a>
@@ -41,8 +47,11 @@
 
 </body>
 <footer>
-    <p>
+    <p class="copyright">
         Copyright 2023-Youskievicz
+    </p>
+    <p class="linkedIn">
+        <a href="https://www.linkedin.com/in/frank-kromer/">Frank's LinkedIn page</a>
     </p>
 </footer>
 
