added footers to all the pages

--- a/About_Page/About_Page.html
+++ b/About_Page/About_Page.html
@@ -49,6 +49,15 @@
         </p>
     </div>
 
+    <footer>
+        <p class="copyright">
+            Copyright 2023-Youskievicz
+        </p>
+        <p class="linkedIn">
+            <a href="https://www.linkedin.com/in/frank-kromer/">Frank's LinkedIn page</a>
+        </p>
+    </footer>
+
 </body>
 
 </html>
