Added header and updated boarder to home page

--- a/index.html
+++ b/index.html
@@ -12,16 +12,21 @@
         rel="stylesheet">
     <title>Landing Page</title>
 </head>
-<nav>
-    <a href="/bioSite/index.html">Home</a>
-    <a href="/bioSite/About_Page/About_Page.html">About</a>
-    <a href="/bioSite/Hobbies_Page/Hobbies_Page.html">Hobbies</a>
-    <a href="../">CSD Landing Page</a>
-</nav>
+<div class="top">
+    <header>
+        <h1>Everything you need to know about Frank(work in progess on the title)</h1>
+    </header>
+    <nav>
+        <a href="/bioSite/index.html">Home</a>
+        <a href="/bioSite/About_Page/About_Page.html">About</a>
+        <a href="/bioSite/Hobbies_Page/Hobbies_Page.html">Hobbies</a>
+        <a href="../">CSD Landing Page</a>
+    </nav>
+</div>
 
 <!---these are just the bare bones of where i want things set up will be more once i move along.-->
 <!--treating thes as a genral outline before diving into this more-->
-<h1>Everything you need to know about Frank(work in progess on the title)</h1>
+
 
 <body>
     <h2 class="welcome">Welcome to the landing Page</h2>
