testing text box

--- a/Hobbies_Page/Hobbies_Page.html
+++ b/Hobbies_Page/Hobbies_Page.html
@@ -50,10 +50,13 @@
     </div>
     <div class="baking">
         <h2>Baking</h2>
-        <p class="cookies">
-            His last hobby that he likes to part take in is baking. He enjoys making cakes, brownies, and cookies. He
-            has a massive sweet tooth, which is why he got into baking in the first place.
-        </p>
+        <div class="boxthree">
+            <p class="cookies">
+                His last hobby that he likes to part take in is baking. He enjoys making cakes, brownies, and cookies.
+                He
+                has a massive sweet tooth, which is why he got into baking in the first place.
+            </p>
+        </div>
     </div>
 
 </body>
