added goals and accomps

--- a/About_Page/About_Page.html
+++ b/About_Page/About_Page.html
@@ -48,6 +48,26 @@
             completed.
         </p>
     </div>
+    <div class="accomps">
+        <h2>Frank's Accomplishments</h2>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+
+    <div class="goals">
+        <h2>Frank's Goals</h2>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+
 
 </body>
 
