--- a/About_Page/About_Page.html
+++ b/About_Page/About_Page.html
@@ -51,20 +51,20 @@
     <div class="accomps">
         <h2>Frank's Accomplishments</h2>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Served in the Navy for 3 years</li>
+            <li>Graduated from CSU with a bacholers</li>
+            <li>Graduating fullstack Bootcamp</li>
+
         </ul>
     </div>
 
     <div class="goals">
         <h2>Frank's Goals</h2>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Create a Startup</li>
+            <li>Get a job at a big tech company</li>
+            <li>Win an Age of Empires 3 World tournemnt</li>
+
         </ul>
     </div>
 
