--- a/About_Page/About_Page.html
+++ b/About_Page/About_Page.html
@@ -18,7 +18,9 @@
 <body>
     <div class="title">
         <div class="container">
-            <div class="centered">Frank Kromer</div>
+            <div class="centered">
+                <h2> Frank Kromer</h2>
+            </div>
         </div>
     </div>
     <h2>About</h2>
