--- a/About_Page/About_Page.html
+++ b/About_Page/About_Page.html
@@ -53,9 +53,10 @@
     <div class="accomps">
         <h2>Frank's Accomplishments</h2>
         <ul>
-            <li>Served in the Navy for 3 years</li>
+            <li>Finished Bootcamp</li>
             <li>Graduated from CSU with a bacholers</li>
-            <li>Graduating fullstack Bootcamp</li>
+            <li>Learned Persian</li>
+            <li>Move acrossed the country</li>
 
         </ul>
     </div>
@@ -63,9 +64,10 @@
     <div class="goals">
         <h2>Frank's Goals</h2>
         <ul>
-            <li>Create a Startup</li>
-            <li>Get a job at a big tech company</li>
-            <li>Win an Age of Empires 3 World tournemnt</li>
+            <li>Travel to other continents</li>
+            <li>Buy a house</li>
+            <li>Retire early</li>
+            <li>Start a new career</li>
 
         </ul>
     </div>
