Testing New buttons

--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
         include an up-to-date short story about his life and some of his favorite hobbies. This is everything you need
         to know about Frank Kromer.
     </p>
-    <div class="left">
+    <div class="button-container">
+        <a href="/bioSite/About_Page/About_Page.html"><img src="/bioSite/landingpageimages/image3.jpg" alt="About"></a>
+        <a href="/bioSite/Hobbies_Page/Hobbies_Page.html"><img src="/bioSite/landingpageimages/games.jpeg"
+                alt="Hobbies"></a>
+        <a href="../"><img src="/bioSite/landingpageimages/bellevue.png" alt="Bellevue"></a>
+    </div>
+
+    <!--  <div class="left">
         <div class="aboutcontainer">
             <a href="/bioSite/About_Page/About_Page.html">About</a>
         </div>
@@ -53,7 +60,7 @@
             <a href="../">Back to CSD landing page</a>
         </div>
     </div>
-
+-->
 </body>
 <footer>
     <p class="copyright">
