--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
         to know about Frank Kromer.
     </p>
     <div class="button-container">
-        <a href="/bioSite/About_Page/About_Page.html"><img src="/bioSite/landingpageimages/image3.jpg" alt="About"></a>
-        <a href="/bioSite/Hobbies_Page/Hobbies_Page.html"><img src="/bioSite/landingpageimages/games.jpeg"
-                alt="Hobbies"></a>
-        <a href="../"><img src="/bioSite/landingpageimages/bellevue.png" alt="Bellevue"></a>
+        <a href="/bioSite/About_Page/About_Page.html"><img src="/bioSite/landingpageimages/image3.jpg" width="200"
+                height="150" alt="About">About</a>
+        <a href="/bioSite/Hobbies_Page/Hobbies_Page.html"><img src="/bioSite/landingpageimages/games.jpeg" width="200"
+                height="150" alt="Hobbies"> Hobbies</a>
+        <a href="../"><img src="/bioSite/landingpageimages/bellevue.png" width="200" height="150" alt="Bellevue">CSD
+            Landing Page</a>
     </div>
 
     <!--  <div class="left">
