button test two

--- a/index.html
+++ b/index.html
@@ -24,10 +24,6 @@
     </nav>
 </div>
 
-<!---these are just the bare bones of where i want things set up will be more once i move along.-->
-<!--treating thes as a genral outline before diving into this more-->
-
-
 <body>
     <h2 class="welcome">Welcome to the landing Page</h2>
     <h3 class="info">Here you will be able to navigate across the site and select what page you want to go to first.
@@ -37,32 +33,16 @@
         to know about Frank Kromer.
     </p>
     <div class="button-container">
-        <a href="/bioSite/About_Page/About_Page.html"><img src="/bioSite/landingpageimages/image3.jpg" width="200"
-                height="150" alt="About">About</a>
-        <a href="/bioSite/Hobbies_Page/Hobbies_Page.html"><img src="/bioSite/landingpageimages/games.jpeg" width="200"
-                height="150" alt="Hobbies"> Hobbies</a>
-        <a href="../"><img src="/bioSite/landingpageimages/bellevue.png" width="200" height="150" alt="Bellevue">CSD
-            Landing Page</a>
+        <a href="/bioSite/About_Page/About_Page.html" class="button"><img src="/bioSite/landingpageimages/image3.jpg"
+                width="200" height="150" alt="About"><span class="button-text">About</span></a>
+        <a href="/bioSite/Hobbies_Page/Hobbies_Page.html" class="button"><img
+                src="/bioSite/landingpageimages/games.jpeg" width="200" height="150" alt="Hobbies"> <span
+                class="button-text">Hobbies</span></a>
+        <a href="../" class="button"><img src="/bioSite/landingpageimages/bellevue.png" width="200" height="150"
+                alt="Bellevue"><span class="button-text">CSD Landing Page</span></a>
     </div>
 
-    <!--  <div class="left">
-        <div class="aboutcontainer">
-            <a href="/bioSite/About_Page/About_Page.html">About</a>
-        </div>
 
-    </div>
-
-    <div class="middle">
-        <div class="hobbiescontainer">
-            <a href="/bioSite/Hobbies_Page/Hobbies_Page.html">Hobbies</a>
-        </div>
-    </div>
-    <div class="right">
-        <div class="CSDcontainer">
-            <a href="../">Back to CSD landing page</a>
-        </div>
-    </div>
--->
 </body>
 <footer>
     <p class="copyright">
