--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <div class="top">
     <header>
-        <h1>Everything you need to know about Frank</h1>
+        <h1>Everything You Need to Know About Frank</h1>
     </header>
     <nav>
         <a href="/bioSite/index.html">Home</a>
