--- a/About_Page/About_Page.html
+++ b/About_Page/About_Page.html
@@ -54,7 +54,7 @@
         <h2>Frank's Accomplishments</h2>
         <ul>
             <li>Finished Bootcamp</li>
-            <li>Graduated from CSU with a bacholers</li>
+            <li>Graduated from CSU with a bachelors in accounting</li>
             <li>Learned Persian</li>
             <li>Move acrossed the country</li>
 
